# login

./: .gitignore  app.py  config.py  init.sql  locustfile.py  pyproject.toml  seed.py  seed_sugarcane.py  test.py
database/: database.py  roi_queries.py  session.py
features/analysis/: queries.py  router.py  schemas.py  service.py
features/auth/: dependencies.py  router.py  service.py
features/gee/: service.py
features/harvest/: queries.py  router.py  schemas.py
features/jobs/: queries.py
features/models/: queries.py  router.py  schemas.py
features/reports/: router.py  schemas.py  service.py
features/roi/: queries.py  router.py  schemas.py  service.py
features/users/: queries.py  router.py  schemas.py  service.py
middleware/: session_middleware.py
models/modelo_TCH_random_forest/: feature_statistics.joblib  features_list.joblib  model_metadata.joblib
models/variedades/CTC-04/CTC-04_agosto/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-04/CTC-04_julho/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-04/CTC-04_junho/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-04/CTC-04_maio/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-04/CTC-04_outubro/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-04/CTC-04_setembro/: feature_rankings.joblib  melhor_modelo.joblib  metadata.joblib
models/variedades/CTC-15/CTC-15_agosto/: feature_rankings.joblib  melhor_modelo.joblib  (+1 more)
routes/: auth_routes.py  roi_routes.py
services/: earth_engine_initializer.py  earth_engine_service.py  report_generator.py  shapefile_service.py
static/: dashboard.html  login.html  settings.html
static/css/: dashboard.css  login.css  settings.css
static/js/: auth.js  dashboard.js  login.js  settings.js  utils.js
static/js/dashboard/: main.js  roi-details-manager.js  roi-manager.js  shapefile-preview.js
static/js/module/: api.js  auth-session.js  map-utils.js  text-normalizer.js  ui-handlers.js
utils/: exception_utils.py  jwt_utils.py  logging.py  normalization_utils.py  session_middleware.py  text_normalizer.py  upload_utils.py  validators.py  zip_creator.py
(+280 files in other folders)
